Do not notify Volume change event to CrasAudioHandler::Observer when CrasAudioHandler change volume during initialization.

BUG=625222

Review-Url: https://codereview.chromium.org/2127033004
Cr-Commit-Position: refs/heads/master@{#404448}

Former-commit-id: 80330de86e05ab54a5cd17b9d3942d9f65b68983